--- a/competition/ShelterForPets.css
+++ b/competition/ShelterForPets.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 body
 {
     top: 0;
@@ -22,12 +23,14 @@ header
 }
 .main-text-in-the-logo
 {
+    font-family: "Rubik", sans-serif;
     color: #FEFAEA;
     font-size: 60px;
     margin: 0;
 }
 .text-in-the-logo
 {
+    font-family: "Rubik", sans-serif;
     color: #FEFAEA;
     font-size: 15px;
     margin: 0;
@@ -42,6 +45,7 @@ nav
 
     p
     {
+        font-family: "Rubik", sans-serif;
         padding: 30px;
         color: #FEFAEA;
         font-size: 25px;
@@ -50,6 +54,7 @@ nav
 }
 .big-text-for-main-screen
 {
+    font-family: "Rubik", sans-serif;
     color: #FEFAEA;
     font-size: 80px;
     margin: 0;
@@ -66,6 +71,7 @@ nav
 }
 .div-with-text-for-main-screne
 {
+    font-family: "Rubik", sans-serif;
     padding: 40px 110px 0 110px;
 }
 .button-in-main-screen
