добавила адаптив на главную страницу

--- a/competition/ShelterForPets.css
+++ b/competition/ShelterForPets.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 body
 {
@@ -25,6 +26,17 @@ p
 {
     background-color: #898E4A;
     padding-top: 150px;
+
+    @media(max-width: 1160px)
+    {
+        padding-top: 100px;
+    }
+
+        
+    @media(max-width: 790px)
+    {
+        padding-top: 70px;
+    }
 }
 .div-for-logo
 {
@@ -36,12 +48,28 @@ p
     color: #FEFAEA;
     font-size: 60px;
     margin: 0;
+
+    @media(max-width: 1160px)
+    {
+        font-size: 40px;
+    }
+
+    
+    @media(max-width: 790px)
+    {
+        font-size: 20px;
+    }
 }
 .text-in-the-logo
 {
     color: #FEFAEA;
     font-size: 15px;
     margin: 0;
+
+    @media(max-width: 1160px)
+    {
+        font-size: 10px;
+    }
 }
 nav
 {
@@ -56,6 +84,17 @@ nav
         color: #FEFAEA;
         font-size: 25px;
         margin: 0;
+
+        @media(max-width: 1160px)
+        {
+            font-size: 20px;
+            padding: 10px;
+        }
+        
+        @media(max-width: 790px)
+        {
+            font-size: 10px;
+        }
     }
 }
 .big-text-for-main-screen
@@ -63,6 +102,16 @@ nav
     color: #FEFAEA;
     font-size: 80px;
     margin: 0;
+
+    @media(max-width: 1160px)
+    {
+        font-size: 60px;
+    }
+
+    @media(max-width: 790px)
+    {
+        font-size: 30px;
+    }
 }
 .button-in-main-screen
 {
@@ -73,6 +122,19 @@ nav
     padding: 20px 50px;
     font-size: 35px;
     margin: 100px 0 40px 0;
+    
+    @media(max-width: 1160px)
+    {
+        font-size: 30px;
+        padding: 10px 40px;
+        margin: 80px 0 20px 0;
+    }
+
+    @media(max-width: 790px)
+    {
+        font-size: 20px;
+        padding: 10px 20px;
+    }
 }
 .div-with-text-for-main-screen
 {
@@ -89,6 +151,18 @@ main
 {
     padding: 20px;
     align-items: center;
+
+    @media(max-width: 888px)
+    {
+        width: 250px;
+        height: auto;
+    }
+
+    @media(max-width: 790px)
+    {
+        width: 150px;
+        height: auto;
+    }
 }
 .about-screen
 {
@@ -104,6 +178,19 @@ main
     padding: 20px;
     padding-right: 50px;
     align-items: center;
+
+    @media(max-width: 888px)
+    {
+        width: 250px;
+        height: auto;
+    }
+
+    @media(max-width: 790px)
+    {
+        width: 150px;
+        height: auto;
+        padding-right: 20px;
+    }
 }
 .big-text-for-about-screen
 {
@@ -112,6 +199,16 @@ main
     margin: 0;
     padding: 20px 0;
     float: left;
+
+    @media(max-width: 1160px)
+    {
+        font-size: 60px;
+    }
+
+    @media(max-width: 790px)
+    {
+        font-size: 30px;
+    }
 }
 .all-in-about-screen
 {
@@ -127,18 +224,42 @@ main
     flex-direction: column;
     justify-content: center;
     padding-left: 50px;
+
+    @media(max-width: 1160px)
+    {
+        padding-left: 20px;
+    }
 }
 .text-in-about-screen
 {
     color: #593D16;
     font-size: 35px;
 
+    @media(max-width: 1160px)
+    {
+        font-size: 25px;
+    }
+
+    @media(max-width: 790px)
+    {
+        font-size: 15px;
+    }
 }
 .ul-in-about-screen
 {
     color: #593D16;
     font-size: 35px;
     font-family: "Rubik", sans-serif;
+
+    @media(max-width: 1160px)
+    {
+        font-size: 25px;
+    }
+
+@media(max-width: 790px)
+    {
+        font-size: 15px;
+    }
 }
 .why-screen
 {
@@ -155,12 +276,32 @@ main
     font-size: 80px;
     margin: 0;
     padding: 20px 0;
+
+    @media(max-width: 1160px)
+    {
+        font-size: 60px;
+    }
+
+    @media(max-width: 790px)
+    {
+        font-size: 30px;
+    }
 }
 .text-in-why-screen
 {
     color: #593D16;
     font-size: 30px;
     width: 70%;
+
+    @media(max-width: 1160px)
+    {
+        font-size: 20px;
+    }
+
+    @media(max-width: 790px)
+    {
+        font-size: 15px;
+    }
 }
 .all-div-in-why-screen
 {
@@ -168,6 +309,11 @@ main
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    @media(max-width: 790px)
+    {
+        flex-direction: column;
+    }
 
     div
     {
@@ -179,6 +325,18 @@ main
         display: flex;
         justify-content: center;
 
+        @media(max-width: 1160px)
+        {
+            width: 200px;
+            height: 180px;
+            border-radius: 20px;
+        }
+
+        @media(max-width: 790px)
+        {
+            margin: 10px 0 20px 0;
+        }
+
         p
         {
             color: #FEFAEA;
@@ -187,6 +345,11 @@ main
             text-align: center;
             margin: 0;
             padding: 0 20px;
+
+            @media(max-width: 1160px)
+            {
+                font-size: 15px;
+            }
         }
     }
 }
@@ -201,6 +364,11 @@ main
         justify-content: space-around;
         align-items: center;
 
+        @media(max-width: 790px)
+        {
+            flex-direction: column;
+        }
+
         div
         {
             display: flex;
@@ -214,12 +382,28 @@ main
             margin-bottom: 100px;
             background-size: contain;
 
+            @media(max-width: 1160px)
+            {
+                width: 300px;
+                height: 300px;
+            }
+
             p
             {
                 color: #593D16;
                 font-size: 40px;
                 text-align: center;
                 padding-top: 480px;
+
+                @media(max-width: 1160px)
+                {
+                    padding-top: 280px;
+                }
+
+                @media(max-width: 790px)
+                {
+                    font-size: 25px;
+                }
             }
         }
     }
@@ -232,16 +416,36 @@ main
     margin: 0;
     padding: 20px 0 50px 0;
     text-align: center;
+
+    @media(max-width: 1160px)
+    {
+        font-size: 60px;
+    }
+
+    @media(max-width: 790px)
+    {
+        font-size: 30px;
+    }
 }
 .first-photo-in-pets-screen
 {
     background: url("картинки/котята.png") no-repeat;
     background-position: 50% 100px;
+
+    @media(max-width: 1160px)
+    {
+        background-position: 50% 50px;
+    }
 }
 .second-photo-in-pets-screen
 {
     background: url("картинки/щеночки.png") no-repeat;
     background-position: 50% 60px;
+
+    @media(max-width: 1160px)
+    {
+        background-position: 50% 40px;
+    }
 }
 footer
 {
@@ -250,12 +454,27 @@ footer
     flex-direction: row;
     justify-content: space-around;
     padding: 50px 0;
+
+    @media(max-width: 1160px)
+    {
+        align-items:  center;
+    }
+
+    @media(max-width: 790px)
+    {
+        flex-direction: column;
+    }
 }
 .text-for-footer
 {
     color: #593D16;
     font-size: 20px;
     font-weight: bold;
+
+    @media(max-width: 790px)
+    {
+        font-size: 15px;
+    }
 }
 .div-sponsors-in-footer
 {
@@ -264,7 +483,7 @@ footer
     justify-content: space-between;
     align-items: center;
 
-    img
+img
     {
         height: 80px;
         width: auto;
