--- a/competition/главная страница/ShelterForPets.css
+++ b/competition/главная страница/ShelterForPets.css
@@ -22,6 +22,10 @@ p
 {
     font-family: "Rubik", sans-serif;
 }
+a
+{
+    font-family: "Rubik", sans-serif;
+}
 .main-screen
 {
     background-color: #898E4A;
@@ -42,6 +46,11 @@ p
 {
     padding: 20px;
     padding-left: 50px;
+
+    a
+    {
+        text-decoration: none;
+    }
 }
 .main-text-in-the-logo
 {
@@ -66,6 +75,7 @@ p
     font-size: 15px;
     margin: 0;
 
+
     @media(max-width: 1160px)
     {
         font-size: 10px;
@@ -77,13 +87,14 @@ nav
     flex-direction: row;
     justify-content: flex-end;
     align-content: flex-end;
-
-    p
+    
+    a
     {
         padding: 30px;
         color: #FEFAEA;
         font-size: 25px;
         margin: 0;
+        text-decoration: none;
 
         @media(max-width: 1160px)
         {
@@ -134,6 +145,12 @@ nav
     {
         font-size: 20px;
         padding: 10px 20px;
+    }
+    
+    a
+    {
+        color: #FEFAEA;
+        text-decoration: none;
     }
 }
 .div-with-text-for-main-screen
@@ -216,7 +233,7 @@ main
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
+    text-decoration: none;
 }
 .all-text-in-about-screen
 {
