--- a/competition/котики/Cats.css
+++ b/competition/котики/Cats.css
@@ -206,7 +206,11 @@ main
         justify-content: space-around;
         align-items: center;
 
-        div
+        a
+        {
+            text-decoration: none;
+
+            div
         {
             width: 300px;
             height: 300px;
@@ -237,7 +241,9 @@ main
                     padding-top: 180px;
                 }
             }
+        }  
         }
+        
     }
     a
     {
