--- a/competition/собачки/Dogs.css
+++ b/competition/собачки/Dogs.css
@@ -168,6 +168,8 @@ main
 {
     padding: 20px;
     align-items: center;
+    width: 350px;
+    height: auto;
 
     @media(max-width: 888px)
     {
