--- a/competition/котики/Cats.css
+++ b/competition/котики/Cats.css
@@ -152,6 +152,11 @@ nav
         text-decoration: none;
     }
 }
+.button-in-main-screen:hover
+{
+    background-color: #FEFAEA;
+    color: #593D16;
+}
 .div-with-text-for-main-screen
 {
     padding: 20px;
@@ -244,6 +249,10 @@ main
                 }
             }
         }  
+        div:hover
+        {
+            border: 10px solid #593D16;
+        }
         }
         
     }
@@ -268,6 +277,11 @@ main
                 padding: 10px 40px;
                 font-size: 20px;
             }
+        }
+        button:hover
+        {
+            color: #E9D7BE;
+            background-color: #593D16;
         }
     }
 }
