--- a/competition/заявка/Application.css
+++ b/competition/заявка/Application.css
@@ -157,6 +157,11 @@ nav
         text-decoration: none;
     }
 }
+.button-in-main-screen:hover
+{
+    background-color: #FEFAEA;
+    color: #593D16;
+}
 .div-with-text-for-main-screen
 {
     padding: 20px;
@@ -268,6 +273,11 @@ main
                 padding: 10px 40px;
                 font-size: 20px;
             }
+        }
+        button:hover
+        {
+            color: #E9D7BE;
+            background-color: #593D16;
         }
     }
 }
