--- a/competition/заявка/Application.css
+++ b/competition/заявка/Application.css
@@ -161,6 +161,9 @@ nav
 {
     background-color: #FEFAEA;
     color: #593D16;
+    transition-property: color, background-color;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in, ease, linear;
 }
 .div-with-text-for-main-screen
 {
